<resources>
    <string name="app_name">膳食資料收集App</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <!-- 星期 -->
    <string name="Mon">一</string>
    <string name="Tue">二</string>
    <string name="Wed">三</string>
    <string name="Thu">四</string>
    <string name="Fri">五</string>
    <string name="Sat">六</string>
    <string name="Sun">日</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="dialogtitle">歡迎來使用這個App\n這個App可以讓您設定每日吃了多少有害物質</string>
    <string name="title_activity_gpsfragment">Map</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="gps">GPS</string>
    <string name="search">Search</string>
    <string name="title_activity_article_command">ArticleCommandActivity</string>
    <string name="title_activity_food_gps_search">Map</string>
    <string name="title_activity_maps">Map</string>

    <string name="notification_success">Picture uploaded.</string>
    <string name="notification_progress">Uploading...</string>
    <string name="notification_share_link">Picture link</string>
    <string name="notification_fail">Upload failed.</string>
    <string name="input_title">Title</string>
    <string name="input_description">Description</string>
    <string name="btn_picture">Browse</string>
    <string name="btn_upload">Upload</string>


    <string name="title">標題</string>
    <string name="enter_title">輸入標題</string>
    <string name="content">內容</string>
    <string name="enter_content">輸入內容</string>
    <string name="about">這是Android Tutorial應用程式</string>
    <string name="version">版本：AndroidTutorial_0.2.4</string>
    <string name="delete">刪除</string>
    <string name="delete_item">確定要刪除 %1$d 個項目？</string>


    <!--註冊與登入-->
    <string name="account">賬號</string>
    <string name="password">密碼</string>
    <string name="repeat_password">再輸入一次密碼</string>
    <string name="name">名字</string>
    <string name="email">郵件</string>
    <string name="phone">電話</string>
    <string name="address">地址</string>
    <string name="record_password">記住密碼</string>
    <string name="login">登入</string>
    <string name="register">註冊</string>
    <string name="register_account">註冊賬號</string>
    <string name="submit">送出</string>
    <string name="forget">忘記密碼</string>
    <string name="getpassword">找回密碼</string>
</resources>
