<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_password_recovery"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity.PasswordRecoveryActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/fragment_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"

        android:elevation="4dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="忘記密碼"
            android:textColor="#FFFFFF"
            android:textSize="19dp" />
    </android.support.v7.widget.Toolbar>

    <TextView
        android:text="@string/account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="17dp"
        android:id="@+id/textView4" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:id="@+id/editText" />

    <TextView
        android:text="@string/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="17dp"
        android:id="@+id/textView5" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:layout_marginBottom="30dp"
        android:id="@+id/editText2" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:layout_width="170dp"
        android:layout_height="55dp">

        <Button
            android:text="@string/submit"
            android:layout_height="match_parent"
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:onClick="btnSend"
            android:layout_weight="0.34" />
    </LinearLayout>
</LinearLayout>
